--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -8,13 +8,6 @@ body {
     background: url('../img/background.jpg') no-repeat fixed left top;
 }
 
-.btn-add-project {
-    display: flex;
-    margin: 0 auto 20px auto;
-    align-self: center;
-
-}
-
 .project-header {
     display: flex;
 
@@ -59,11 +52,64 @@ body {
 }
 
 .main-header {
-    margin-top: 0;
+    display: flex;
+    flex-direction: row;
+
     margin-bottom: 60px;
 
     width: 100%;
     height: 100px;
 
-    background-color: rgba(25, 159, 231, 0.57);
+    background-color: rgb(231, 231, 231);
+    box-shadow: 0 2px 2px grey;
+}
+
+.header-content {
+    display: flex;
+    margin-top: 20px;
+    flex-direction: row;
+    justify-content: space-between;
+
+    color: black;
+}
+
+.user-controls {
+    display: flex;
+    flex-direction: column;
+}
+
+.username {
+    align-self: flex-end;
+    text-align: right;
+}
+
+.log-out {
+    margin: 0;
+    padding: 0;
+    border: 0;
+
+    align-self: flex-end;
+    outline: none;
+
+    background-color: transparent;
+
+    text-align: right;
+    font-size: 15px;
+}
+
+.log-out:active {
+    overflow: hidden;
+}
+
+.btn-add-project {
+    display: flex;
+    padding: 7px 20px;
+
+    font-size: 18px;
+    font-weight: 100;
+
+    background-color: white;
+    border: 1px solid lightgrey;
+    border-radius: 4px;
+    color: black;
 }
